--- a/main.html
+++ b/main.html
@@ -10,6 +10,7 @@
 <a href="algebra.php" class="box1">Algebra</a>
 <a href="trigonometri.php" class="box2">Trigonometri</a>
 <a href="geometri.php" class="box3">Geometri</a>
+<a href="convert.php" class="box4">Converter</a>
 
 </body>
 </html>
