--- a/main.html
+++ b/main.html
@@ -6,11 +6,13 @@
 </head>
 
 <body>
-
-<a href="algebra.php" class="box1">Algebra</a>
-<a href="trigonometri.php" class="box2">Trigonometri</a>
-<a href="geometri.php" class="box3">Geometri</a>
-<a href="convert.php" class="box4">Converter</a>
-
+<div class="flex">
+    <a href="algebra.php" class="box">Algebra</a>
+	<div class="flex2">
+		<a href="geometri.php" class="box">Geometri</a>
+		<a href="trigonometri.php" class="box">Trigonometri</a>
+	</div>
+    <a href="convert.php" class="box">Converter</a>
+</div>
 </body>
 </html>
