--- a/main.html
+++ b/main.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+<center><h1>Matematikens påverkan på ekonomi genom historia</h1></center>
 <div class="flex">
     <a href="algebra.php" class="box">Algebra</a>
 	<div class="flex2">
